--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.1.2",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
   }
 }
